version 3.41 2024-09-20
- changed hash_passwords routine in /maintenance/update data structure/ to use password_wrapper() rather than SHA1
- fixed mysqldump bug: mySQL credentials can now include special characters
- fixed installer bug: mySQL credentials can now include quotes
- added conditional logic for $config['logo_path']
- changed fields.type + fields.section from VARCHAR(10) to ENUM
- added "test upload" submodule to maintenance
- added mysqlinfo to /maintenance/versions/
- upgraded to PHPMailer 6.9.1 (2023-11-25)
- removed underlined links
- fixed bug where password_wrapper() would validate hashes as passwords
- tooltips now use maxWidth rather than width
- lightbox() now resizable
- lightbox() can now set width + height to fit contents by passing 0 as function arguments
- added last_reader_id to submissions table (requires sync_last_action() for last action tooltips)
- added "last action" tooltips on action counts on main submission list
- added "back to reports" logic to link back from submissions + contacts
- simplified entropy of get_hash() by using sha1_file('config_db.php')
- session_name() is now always unique per SM install using "submgr_" + sha1($getcwd)
- added upload_max_filesize routine to /maintenance/fields/
- added TIDY constant to config_db.php
- moved TEST_MAIL constant from inc_common.php to config_db.php
- improved error/exception handling in db_connect()
- added check for custom.js
- refactoring of disable_submit() to dynamically create all submit_hidden/form_hash form fields
- added $password_length_min (8) + $password_length_max (72) global variables (will be derived from $fields)
- removed $config['max_file_size'] $config['max_comments_size'] $config['default_country'] $config['default_mailing_list'] $config['use_genres'] (all now reside in $fields)
- added get_bytes_formatted() function
- added get_groups() function
- added get_fields() function
- added "fields" table to store all form_main() properties