@@ -1,4 +1,5 @@
 version 3.41 2024-09-20
+- added "purge legacy password hashes" to /maintenance/purge/
 - changed hash_passwords routine in /maintenance/update data structure/ to use password_wrapper() rather than SHA1
 - fixed mysqldump bug: mySQL credentials can now include special characters
 - fixed installer bug: mySQL credentials can now include quotes
